[package]
name = "rawloader"
version = "0.37.1"
authors = ["Pedro Côrte-Real <pedro@pedrocr.net>", "Anshul Sanghi <anshul@anshulsanghi.tech>"]
description = "A library to extract the data from camera raw formats"
documentation = "https://docs.rs/rawloader/"
repository = "https://github.com/anshap1719/rawloader"
license = "LGPL-2.1"
categories = ["multimedia::images"]
edition = "2018"

[dependencies]
toml = "0.9.5"
enumn = "0.1"
lazy_static = "1"
byteorder = "1"
rayon = "1"
serde = { version = "1.0.219", features = ["derive"] }

[build-dependencies]
toml = "0.9.5"
reqwest = { version = "0.12.22", features = ["blocking", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-xml-rs = "0.8.1"
lazy_static = "1.5.0"

[dev-dependencies]
sha2 = "0.10"
hex = "0.4"

[profile.release]
panic = "unwind"

[profile.dev]
panic = "unwind"
opt-level = 3

[[bin]]
name = "benchmark"
doc = false

[[bin]]
name = "identify"
doc = false
